--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments.html :: head"></head>
 <body class="bg-light">
-<!--<div th:replace="fragments.html :: main-nav"></div>-->
+<div th:replace="fragments.html :: main-nav"></div>
 
 <div class="container">
     <div class="py-5 text-center">
@@ -56,6 +56,6 @@
 
     <div class="fragments.html :: footer"></div>
 </div>
-<script th:replace="fragments.html :: form-validation"></script>
+<!--<script th:replace="fragments.html :: form-validation"></script>-->
 </body>
 </html>
