--- a/src/main/resources/templates/account/check-email.html
+++ b/src/main/resources/templates/account/check-email.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments.html :: head"></head>
 <body class="bg-light">
-<!--    <nav th:replace="fragments.html :: main-nav"></nav>-->
+    <nav th:replace="fragments.html :: main-nav"></nav>
 
     <div class="container">
         <div class="py-5 text-center" th:if="${error != null}">
