--- a/src/main/resources/templates/account/email-login.html
+++ b/src/main/resources/templates/account/email-login.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments.html :: head"></head>
 <body class="bg-light">
-<!--    <div th:replace="fragments.html :: main-nav"></div>-->
+    <div th:replace="fragments.html :: main-nav"></div>
     <div class="container">
         <div class="py-5 text-center">
             <p class="lead">스터디올래</p>
