--- a/src/main/resources/templates/account/profile.html
+++ b/src/main/resources/templates/account/profile.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org">
-<!--<head th:replace="fragments.html :: head"></head>-->
+<head th:replace="fragments.html :: head"></head>
 <body class="bg-light">
-    <!--<div th:replace="fragments.html :: main-nav"></div>-->
+    <div th:replace="fragments.html :: main-nav"></div>
     <div class="container">
         <div class="row mt-5 justify-content-center">
             <div class="col-2">
