--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -56,6 +56,6 @@
 
     <div class="fragments.html :: footer"></div>
 </div>
-<!--<script th:replace="fragments.html :: form-validation"></script>-->
+<script th:replace="fragments.html :: form-validation"></script>
 </body>
 </html>
