--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -55,6 +55,6 @@
 
         <div th:replace="fragments.html :: footer"></div>
     </div>
-<!--    <script th:replace="fragments.html :: form-validation"></script>-->
+    <script th:replace="fragments.html :: form-validation"></script>
 </body>
 </html>
