--- a/src/main/resources/templates/settings/profile.html
+++ b/src/main/resources/templates/settings/profile.html
@@ -66,12 +66,11 @@
                         </div>
 
                         <div class="form-group">
-                            <input id="profileImage" type="hidden" th:field="*{profileImage}" class="form-control" />
+                            <!--<input id="profileImage" type="hidden" th:field="*{profileImage}" class="form-control" />-->
                         </div>
 
                         <div class="form-group">
-                            <button class="btn btn-primary btn-block" type="submit"
-                                    aria-describedby="submitHelp">수정하기</button>
+                            <button class="btn btn-primary btn-block" type="submit" aria-describedby="submitHelp">수정하기</button>
                         </div>
                     </form>
                     <div class="col-sm-6">
