--- a/src/main/resources/templates/settings/profile.html
+++ b/src/main/resources/templates/settings/profile.html
@@ -66,7 +66,7 @@
                         </div>
 
                         <div class="form-group">
-                            <!--<input id="profileImage" type="hidden" th:field="*{profileImage}" class="form-control" />-->
+                            <input id="profileImage" type="hidden" th:field="*{profileImage}" class="form-control" />
                         </div>
 
                         <div class="form-group">
@@ -79,11 +79,11 @@
                                 프로필 이미지
                             </div>
                             <div id="current-profile-image" class="mt-3">
-                                <!--<svg th:if="${#strings.isEmpty(profile.profileImage)}" class="rounded"
+                                <svg th:if="${#strings.isEmpty(profile.profileImage)}" class="rounded"
                                      th:data-jdenticon-value="${account.nickname}" width="125" height="125"></svg>
                                 <img th:if="${!#strings.isEmpty(profile.profileImage)}" class="rounded"
                                      th:src="${profile.profileImage}"
-                                     width="125" height="125" alt="name" th:alt="${account.nickname}"/>-->
+                                     width="125" height="125" alt="name" th:alt="${account.nickname}"/>
                             </div>
                             <div id="new-profile-image" class="mt-3"></div>
                             <div class="card-body">
