--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -199,15 +199,15 @@
     }())
 </script>
 
-<!--<script type="application/javascript" th:inline="javascript" th:fragment="ajax-csrf-header">-->
-<!--    $(function() {-->
-<!--        var csrfToken = /*[[${_csrf.token}]]*/ null;-->
-<!--        var csrfHeader = /*[[${_csrf.headerName}]]*/ null;-->
-<!--        $(document).ajaxSend(function (e, xhr, options) {-->
-<!--            xhr.setRequestHeader(csrfHeader, csrfToken);-->
-<!--        });-->
-<!--    });-->
-<!--</script>-->
+<script type="application/javascript" th:inline="javascript" th:fragment="ajax-csrf-header">
+    $(function() {
+        var csrfToken = /*[[${_csrf.token}]]*/ null;
+        var csrfHeader = /*[[${_csrf.headerName}]]*/ null;
+        $(document).ajaxSend(function (e, xhr, options) {
+            xhr.setRequestHeader(csrfHeader, csrfToken);
+        });
+    });
+</script>
 
 <!--<div th:fragment="study-banner" th:if="${study.useBanner}" class="row" id="study-logo">-->
 <!--    <img th:src="${study.image}"/>-->
