--- a/src/main/resources/templates/study/settings/zones.html
+++ b/src/main/resources/templates/study/settings/zones.html
@@ -30,6 +30,7 @@
         </div>
         <div th:replace="fragments.html :: footer"></div>
     </div>
+    <script th:replace="fragments.html :: tooltip"></script>
     <script th:replace="fragments.html :: ajax-csrf-header"></script>
     <script th:replace="fragments.html :: update-zones(baseUrl='/study/' + ${study.path} + '/settings/zones')"></script>
 </body>
