--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -356,175 +356,175 @@
 
 
 
-<!--<script type="application/javascript" th:inline="javascript">-->
-<!--    $(function() {-->
-<!--        var studyPath = "[(${study.path})]";-->
-<!--        function tagRequest(url, tagTitle) {-->
-<!--            $.ajax({-->
-<!--                dataType: "json",-->
-<!--                autocomplete: {-->
-<!--                    enabled: true,-->
-<!--                    rightKey: true,-->
-<!--                },-->
-<!--                contentType: "application/json; charset=utf-8",-->
-<!--                method: "POST",-->
-<!--                url: "/study/" + studyPath + "/settings/tags" + url,-->
-<!--                data: JSON.stringify({'tagTitle': tagTitle})-->
-<!--            }).done(function (data, status) {-->
-<!--                console.log("${data} and status is ${status}");-->
-<!--            });-->
-<!--        }-->
+<script type="application/javascript" th:inline="javascript">
+    $(function() {
+        var studyPath = "[(${study.path})]";
+        function tagRequest(url, tagTitle) {
+            $.ajax({
+                dataType: "json",
+                autocomplete: {
+                    enabled: true,
+                    rightKey: true,
+                },
+                contentType: "application/json; charset=utf-8",
+                method: "POST",
+                url: "/study/" + studyPath + "/settings/tags" + url,
+                data: JSON.stringify({'tagTitle': tagTitle})
+            }).done(function (data, status) {
+                console.log("${data} and status is ${status}");
+            });
+        }
 
-<!--        function onAdd(e) {-->
-<!--            tagRequest("/add", e.detail.data.value);-->
-<!--        }-->
+        function onAdd(e) {
+            tagRequest("/add", e.detail.data.value);
+        }
 
-<!--        function onRemove(e) {-->
-<!--            tagRequest("/remove", e.detail.data.value);-->
-<!--        }-->
+        function onRemove(e) {
+            tagRequest("/remove", e.detail.data.value);
+        }
 
-<!--        var tagInput = document.querySelector("#tags");-->
+        var tagInput = document.querySelector("#tags");
 
-<!--        var tagify = new Tagify(tagInput, {-->
-<!--            pattern: /^.{0,20}$/,-->
-<!--            whitelist: JSON.parse(document.querySelector("#whitelist").textContent),-->
-<!--            dropdown : {-->
-<!--                enabled: 1, // suggest tags after a single character input-->
-<!--            } // map tags-->
-<!--        });-->
-<!--        tagify.on("add", onAdd);-->
-<!--        tagify.on("remove", onRemove);-->
-<!--        // add a class to Tagify's input element-->
-<!--        tagify.DOM.input.classList.add('form-control');-->
-<!--        // re-place Tagify's input element outside of the  element (tagify.DOM.scope), just before it-->
-<!--        tagify.DOM.scope.parentNode.insertBefore(tagify.DOM.input, tagify.DOM.scope);-->
-<!--    });-->
-<!--</script>-->
+        var tagify = new Tagify(tagInput, {
+            pattern: /^.{0,20}$/,
+            whitelist: JSON.parse(document.querySelector("#whitelist").textContent),
+            dropdown : {
+                enabled: 1, // suggest tags after a single character input
+            } // map tags
+        });
+        tagify.on("add", onAdd);
+        tagify.on("remove", onRemove);
+        // add a class to Tagify's input element
+        tagify.DOM.input.classList.add('form-control');
+        // re-place Tagify's input element outside of the  element (tagify.DOM.scope), just before it
+        tagify.DOM.scope.parentNode.insertBefore(tagify.DOM.input, tagify.DOM.scope);
+    });
+</script>
 
-<!--<div th:fragment="update-tags (baseUrl)">-->
-<!--    <script src="/node_modules/@yaireo/tagify/dist/tagify.min.js"></script>-->
-<!--    <script type="application/javascript" th:inline="javascript">-->
-<!--        $(function() {-->
-<!--            function tagRequest(url, tagTitle) {-->
-<!--                $.ajax({-->
-<!--                    dataType: "json",-->
-<!--                    autocomplete: {-->
-<!--                        enabled: true,-->
-<!--                        rightKey: true,-->
-<!--                    },-->
-<!--                    contentType: "application/json; charset=utf-8",-->
-<!--                    method: "POST",-->
-<!--                    url: "[(${baseUrl})]" + url,-->
-<!--                    data: JSON.stringify({'tagTitle': tagTitle})-->
-<!--                }).done(function (data, status) {-->
-<!--                    console.log("${data} and status is ${status}");-->
-<!--                });-->
-<!--            }-->
+<div th:fragment="update-tags (baseUrl)">
+    <script src="/node_modules/@yaireo/tagify/dist/tagify.min.js"></script>
+    <script type="application/javascript" th:inline="javascript">
+        $(function() {
+            function tagRequest(url, tagTitle) {
+                $.ajax({
+                    dataType: "json",
+                    autocomplete: {
+                        enabled: true,
+                        rightKey: true,
+                    },
+                    contentType: "application/json; charset=utf-8",
+                    method: "POST",
+                    url: "[(${baseUrl})]" + url,
+                    data: JSON.stringify({'tagTitle': tagTitle})
+                }).done(function (data, status) {
+                    console.log("${data} and status is ${status}");
+                });
+            }
 
-<!--            function onAdd(e) {-->
-<!--                tagRequest("/add", e.detail.data.value);-->
-<!--            }-->
+            function onAdd(e) {
+                tagRequest("/add", e.detail.data.value);
+            }
 
-<!--            function onRemove(e) {-->
-<!--                tagRequest("/remove", e.detail.data.value);-->
-<!--            }-->
+            function onRemove(e) {
+                tagRequest("/remove", e.detail.data.value);
+            }
 
-<!--            var tagInput = document.querySelector("#tags");-->
-<!--            var tagify = new Tagify(tagInput, {-->
-<!--                pattern: /^.{0,20}$/,-->
-<!--                whitelist: JSON.parse(document.querySelector("#whitelist").textContent),-->
-<!--                dropdown : {-->
-<!--                    enabled: 1, // suggest tags after a single character input-->
-<!--                } // map tags-->
-<!--            });-->
-<!--            tagify.on("add", onAdd);-->
-<!--            tagify.on("remove", onRemove);-->
-<!--            // add a class to Tagify's input element-->
-<!--            tagify.DOM.input.classList.add('form-control');-->
-<!--            // re-place Tagify's input element outside of the  element (tagify.DOM.scope), just before it-->
-<!--            tagify.DOM.scope.parentNode.insertBefore(tagify.DOM.input, tagify.DOM.scope);-->
-<!--        });-->
-<!--    </script>-->
-<!--</div>-->
+            var tagInput = document.querySelector("#tags");
+            var tagify = new Tagify(tagInput, {
+                pattern: /^.{0,20}$/,
+                whitelist: JSON.parse(document.querySelector("#whitelist").textContent),
+                dropdown : {
+                    enabled: 1, // suggest tags after a single character input
+                } // map tags
+            });
+            tagify.on("add", onAdd);
+            tagify.on("remove", onRemove);
+            // add a class to Tagify's input element
+            tagify.DOM.input.classList.add('form-control');
+            // re-place Tagify's input element outside of the  element (tagify.DOM.scope), just before it
+            tagify.DOM.scope.parentNode.insertBefore(tagify.DOM.input, tagify.DOM.scope);
+        });
+    </script>
+</div>
 
-<!--<div th:fragment="update-zones (baseUrl)">-->
-<!--    <script src="/node_modules/@yaireo/tagify/dist/tagify.min.js"></script>-->
-<!--    <script type="application/javascript">-->
-<!--        $(function () {-->
-<!--            function tagRequest(url, zoneName) {-->
-<!--                $.ajax({-->
-<!--                    dataType: "json",-->
-<!--                    autocomplete: {-->
-<!--                        enabled: true,-->
-<!--                        rightKey: true,-->
-<!--                    },-->
-<!--                    contentType: "application/json; charset=utf-8",-->
-<!--                    method: "POST",-->
-<!--                    url: "[(${baseUrl})]" + url,-->
-<!--                    data: JSON.stringify({'zoneName': zoneName})-->
-<!--                }).done(function (data, status) {-->
-<!--                    console.log("${data} and status is ${status}");-->
-<!--                });-->
-<!--            }-->
+<div th:fragment="update-zones (baseUrl)">
+    <script src="/node_modules/@yaireo/tagify/dist/tagify.min.js"></script>
+    <script type="application/javascript">
+        $(function () {
+            function tagRequest(url, zoneName) {
+                $.ajax({
+                    dataType: "json",
+                    autocomplete: {
+                        enabled: true,
+                        rightKey: true,
+                    },
+                    contentType: "application/json; charset=utf-8",
+                    method: "POST",
+                    url: "[(${baseUrl})]" + url,
+                    data: JSON.stringify({'zoneName': zoneName})
+                }).done(function (data, status) {
+                    console.log("${data} and status is ${status}");
+                });
+            }
 
-<!--            function onAdd(e) {-->
-<!--                tagRequest("/add", e.detail.data.value);-->
-<!--            }-->
+            function onAdd(e) {
+                tagRequest("/add", e.detail.data.value);
+            }
 
-<!--            function onRemove(e) {-->
-<!--                tagRequest("/remove", e.detail.data.value);-->
-<!--            }-->
+            function onRemove(e) {
+                tagRequest("/remove", e.detail.data.value);
+            }
 
-<!--            var tagInput = document.querySelector("#zones");-->
+            var tagInput = document.querySelector("#zones");
 
-<!--            var tagify = new Tagify(tagInput, {-->
-<!--                enforceWhitelist: true,-->
-<!--                whitelist: JSON.parse(document.querySelector("#whitelist").textContent),-->
-<!--                dropdown : {-->
-<!--                    enabled: 1, // suggest tags after a single character input-->
-<!--                } // map tags-->
-<!--            });-->
+            var tagify = new Tagify(tagInput, {
+                enforceWhitelist: true,
+                whitelist: JSON.parse(document.querySelector("#whitelist").textContent),
+                dropdown : {
+                    enabled: 1, // suggest tags after a single character input
+                } // map tags
+            });
 
-<!--            tagify.on("add", onAdd);-->
-<!--            tagify.on("remove", onRemove);-->
+            tagify.on("add", onAdd);
+            tagify.on("remove", onRemove);
 
-<!--            // add a class to Tagify's input element-->
-<!--            tagify.DOM.input.classList.add('form-control');-->
-<!--            // re-place Tagify's input element outside of the  element (tagify.DOM.scope), just before it-->
-<!--            tagify.DOM.scope.parentNode.insertBefore(tagify.DOM.input, tagify.DOM.scope);-->
-<!--        });-->
-<!--    </script>-->
-<!--</div>-->
+            // add a class to Tagify's input element
+            tagify.DOM.input.classList.add('form-control');
+            // re-place Tagify's input element outside of the  element (tagify.DOM.scope), just before it
+            tagify.DOM.scope.parentNode.insertBefore(tagify.DOM.input, tagify.DOM.scope);
+        });
+    </script>
+</div>
 
-<!--<div th:fragment="date-time">-->
-<!--    <script src="/node_modules/moment/min/moment-with-locales.min.js"></script>-->
-<!--    <script type="application/javascript">-->
-<!--        $(function () {-->
-<!--            moment.locale('ko');-->
-<!--            $(".date-time").text(function(index, dateTime) {-->
-<!--                return moment(dateTime, "YYYY-MM-DD`T`hh:mm").format('LLL');-->
-<!--            });-->
-<!--            $(".date").text(function(index, dateTime) {-->
-<!--                return moment(dateTime, "YYYY-MM-DD`T`hh:mm").format('LL');-->
-<!--            });-->
-<!--            $(".weekday").text(function(index, dateTime) {-->
-<!--                return moment(dateTime, "YYYY-MM-DD`T`hh:mm").format('dddd');-->
-<!--            });-->
-<!--            $(".time").text(function(index, dateTime) {-->
-<!--                return moment(dateTime, "YYYY-MM-DD`T`hh:mm").format('LT');-->
-<!--            });-->
-<!--            $(".calendar").text(function(index, dateTime) {-->
-<!--                return moment(dateTime, "YYYY-MM-DD`T`hh:mm").calendar();-->
-<!--            });-->
-<!--            $(".fromNow").text(function(index, dateTime) {-->
-<!--                return moment(dateTime, "YYYY-MM-DD`T`hh:mm").fromNow();-->
-<!--            });-->
-<!--            $(".date-weekday-time").text(function(index, dateTime) {-->
-<!--                return moment(dateTime, "YYYY-MM-DD`T`hh:mm").format('LLLL');-->
-<!--            });-->
-<!--        })-->
-<!--    </script>-->
-<!--</div>-->
+<div th:fragment="date-time">
+    <script src="/node_modules/moment/min/moment-with-locales.min.js"></script>
+    <script type="application/javascript">
+        $(function () {
+            moment.locale('ko');
+            $(".date-time").text(function(index, dateTime) {
+                return moment(dateTime, "YYYY-MM-DD`T`hh:mm").format('LLL');
+            });
+            $(".date").text(function(index, dateTime) {
+                return moment(dateTime, "YYYY-MM-DD`T`hh:mm").format('LL');
+            });
+            $(".weekday").text(function(index, dateTime) {
+                return moment(dateTime, "YYYY-MM-DD`T`hh:mm").format('dddd');
+            });
+            $(".time").text(function(index, dateTime) {
+                return moment(dateTime, "YYYY-MM-DD`T`hh:mm").format('LT');
+            });
+            $(".calendar").text(function(index, dateTime) {
+                return moment(dateTime, "YYYY-MM-DD`T`hh:mm").calendar();
+            });
+            $(".fromNow").text(function(index, dateTime) {
+                return moment(dateTime, "YYYY-MM-DD`T`hh:mm").fromNow();
+            });
+            $(".date-weekday-time").text(function(index, dateTime) {
+                return moment(dateTime, "YYYY-MM-DD`T`hh:mm").format('LLLL');
+            });
+        })
+    </script>
+</div>
 
 
 <!--<div th:fragment="event-form (mode, action)">-->
